--- a/templates/compose/crawl4ai.yaml
+++ b/templates/compose/crawl4ai.yaml
@@ -1,6 +1,7 @@
 # documentation: https://docs.crawl4ai.com/
 # slogan: Crawl4AI: Open-source LLM Friendly Web Crawler & Scraper.
 # tags: webcrawl,llm,webscraping
+# logo: svgs/crawl4ai.svg
 # port: 11235
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
