--- a/templates/compose/maxun.yaml
+++ b/templates/compose/maxun.yaml
@@ -1,6 +1,7 @@
 # documentation: https://docs.maxun.dev/
 # slogan: Open Source No Code Web Data Extraction Platform • Turn Websites To APIs & Spreadsheets With No-Code Robots In Minutes
 # tags: scrape,web,api,automation,productivity
+# logo: svgs/maxun.svg
 # port: 5173
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
