--- a/templates/compose/autobase.yaml
+++ b/templates/compose/autobase.yaml
@@ -1,6 +1,7 @@
 # documentation: https://autobase.tech/docs
 # slogan: Automated database platform for PostgreSQL® - Your own DBaaS.
 # tags: database,postgresql,dbaas
+# logo: svgs/autobase.svg
 # port: 80
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
