--- a/templates/compose/lightrag-production.yaml
+++ b/templates/compose/lightrag-production.yaml
@@ -1,6 +1,7 @@
 # documentation: https://github.com/HKUDS/LightRAG
 # slogan: Simple and Fast Retrieval-Augmented Generation
 # tags: RAG, lightrag,production,ai,graphrag
+# logo: svgs/lightrag-production.svg
 # port: 9621
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
