--- a/templates/compose/linkwarden.yaml
+++ b/templates/compose/linkwarden.yaml
@@ -1,6 +1,7 @@
 # documentation: https://docs.linkwarden.app/
 # slogan: Self-hosted collaborative bookmark manager to collect, organize, and preserve webpages, articles, and documents.
 # tags: bookmarks,web,archive,selfhosted,productivity
+# logo: svgs/linkwarden.svg
 # port: 3000
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
