--- a/templates/compose/pgadmin.yaml
+++ b/templates/compose/pgadmin.yaml
@@ -1,6 +1,7 @@
 # documentation: https://www.pgadmin.org/docs/pgadmin4/latest/container_deployment.html
 # slogan: pgAdmin is the most popular and feature rich Open Source administration and development platform for PostgreSQL, the most advanced Open Source database in the world.
 # tags: database,postgresql,admin,web
+# logo: svgs/pgadmin.svg
 # port: 80
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
