--- a/templates/compose/pgbackweb.yaml
+++ b/templates/compose/pgbackweb.yaml
@@ -1,6 +1,7 @@
 # documentation: https://github.com/eduardolat/pgbackweb
 # slogan: Effortless PostgreSQL backups with a user-friendly web interface!
 # tags: postgres,backup,restore,s3,selfhosted,productivity
+# logo: svgs/pgbackweb.svg
 # port: 8085
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
