--- a/templates/compose/planka.yaml
+++ b/templates/compose/planka.yaml
@@ -1,6 +1,7 @@
 # documentation: https://docs.planka.cloud/
 # slogan: Elegant open source project tracking
 # tags: web,api,project-management,kanban
+# logo: svgs/planka.svg
 # port: 1337
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
