--- a/templates/compose/quackback.yaml
+++ b/templates/compose/quackback.yaml
@@ -1,6 +1,7 @@
 # documentation: https://docs.quackback.io/
 # slogan: Open-source customer feedback platform. Collect, organize, and act on user feedback.
 # tags: feedback,product-management,open-source,selfhosted
+# logo: svgs/quackback.svg
 # port: 3000
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
