--- a/templates/compose/vaultwarden-pg.yaml
+++ b/templates/compose/vaultwarden-pg.yaml
@@ -1,6 +1,7 @@
 # documentation: https://github.com/dani-garcia/vaultwarden
 # slogan: Unofficial Bitwarden compatible server written in Rust, formerly known as bitwarden_rs
 # tags: vaultwarden,bitwarden,password-manager
+# logo: svgs/vaultwarden-pg.svg
 # port: 80
 # author: @oregapam
 # repository: https://github.com/oregapam/awesome-coolify-service-templates
