fix: dify update fix plugin daemon auth

--- a/templates/compose/dify.yaml
+++ b/templates/compose/dify.yaml
@@ -167,6 +167,7 @@ x-shared-env: &shared-api-worker-env
   ALLOW_UNSAFE_DATA_SCHEME: ${ALLOW_UNSAFE_DATA_SCHEME:-false}
   MAX_TREE_DEPTH: ${MAX_TREE_DEPTH:-50}
   PLUGIN_DAEMON_URL: http://plugin_daemon:5002
+  PLUGIN_DAEMON_KEY: $SERVICE_PASSWORD_64_PLUGINDAEMONKEY
   PLUGIN_MAX_PACKAGE_SIZE: ${PLUGIN_MAX_PACKAGE_SIZE:-52428800}
   PLUGIN_DIFY_INNER_API_KEY: $SERVICE_PASSWORD_64_INNERAPIKEY
   PLUGIN_DIFY_INNER_API_URL: http://api:5001
